Fixed changes with importing sklearn by installing sklearn

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,21 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m \n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m \n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
@@ -278,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice the null values for the gender feature; I opted to just drop this data completely"
+    "Notice the null values for the gender feature; I opted to just drop this data completely. We then create the training set and testing set. I use the convention of allocating 20% of our data to test set."
    ]
   },
   {
@@ -323,21 +311,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodel_selection\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[0;32m      3\u001b[0m X \u001b[38;5;241m=\u001b[39m data\u001b[38;5;241m.\u001b[39mdrop([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlife_span\u001b[39m\u001b[38;5;124m'\u001b[39m], axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      4\u001b[0m y \u001b[38;5;241m=\u001b[39m data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlife_span\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
@@ -347,24 +323,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size = 0.2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>average_length(inches))</th>\n",
+       "      <th>average_weight(inches))</th>\n",
+       "      <th>habitat</th>\n",
+       "      <th>ph_of_water</th>\n",
+       "      <th>color</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>life_span</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1169</th>\n",
+       "      <td>1170</td>\n",
+       "      <td>8.61</td>\n",
+       "      <td>13.23</td>\n",
+       "      <td>rivers</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>Red_and_White_Bi_Color</td>\n",
+       "      <td>False</td>\n",
+       "      <td>18.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>745</th>\n",
+       "      <td>746</td>\n",
+       "      <td>5.62</td>\n",
+       "      <td>16.42</td>\n",
+       "      <td>ponds</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>Red_and_Silver</td>\n",
+       "      <td>False</td>\n",
+       "      <td>2.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>500</td>\n",
+       "      <td>17.10</td>\n",
+       "      <td>16.93</td>\n",
+       "      <td>slowmovingwaters</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>Reddish_Orange</td>\n",
+       "      <td>True</td>\n",
+       "      <td>16.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1329</th>\n",
+       "      <td>1330</td>\n",
+       "      <td>19.89</td>\n",
+       "      <td>17.16</td>\n",
+       "      <td>idlewater</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>Red_and_White_Bi_Color</td>\n",
+       "      <td>True</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1241</th>\n",
+       "      <td>1242</td>\n",
+       "      <td>5.85</td>\n",
+       "      <td>12.57</td>\n",
+       "      <td>slowmovingwaters</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>White</td>\n",
+       "      <td>True</td>\n",
+       "      <td>23.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>711</th>\n",
+       "      <td>712</td>\n",
+       "      <td>18.62</td>\n",
+       "      <td>4.82</td>\n",
+       "      <td>ponds</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>White</td>\n",
+       "      <td>True</td>\n",
+       "      <td>12.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>365</th>\n",
+       "      <td>366</td>\n",
+       "      <td>15.54</td>\n",
+       "      <td>2.04</td>\n",
+       "      <td>ponds</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>True</td>\n",
+       "      <td>8.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1857</th>\n",
+       "      <td>1858</td>\n",
+       "      <td>10.05</td>\n",
+       "      <td>15.47</td>\n",
+       "      <td>idlewater</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>Red_and_White_Bi_Color</td>\n",
+       "      <td>False</td>\n",
+       "      <td>13.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>765</th>\n",
+       "      <td>766</td>\n",
+       "      <td>5.48</td>\n",
+       "      <td>6.77</td>\n",
+       "      <td>idlewater</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>Reddish_Orange</td>\n",
+       "      <td>False</td>\n",
+       "      <td>12.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>130</td>\n",
+       "      <td>9.28</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>rivers</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>Green_and_Chocolate</td>\n",
+       "      <td>True</td>\n",
+       "      <td>17.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1580 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id  average_length(inches))  average_weight(inches))  \\\n",
+       "1169  1170                     8.61                    13.23   \n",
+       "745    746                     5.62                    16.42   \n",
+       "499    500                    17.10                    16.93   \n",
+       "1329  1330                    19.89                    17.16   \n",
+       "1241  1242                     5.85                    12.57   \n",
+       "...    ...                      ...                      ...   \n",
+       "711    712                    18.62                     4.82   \n",
+       "365    366                    15.54                     2.04   \n",
+       "1857  1858                    10.05                    15.47   \n",
+       "765    766                     5.48                     6.77   \n",
+       "129    130                     9.28                     2.99   \n",
+       "\n",
+       "               habitat  ph_of_water                   color Gender  life_span  \n",
+       "1169            rivers          7.5  Red_and_White_Bi_Color  False       18.2  \n",
+       "745              ponds          6.5          Red_and_Silver  False        2.4  \n",
+       "499   slowmovingwaters          6.8          Reddish_Orange   True       16.5  \n",
+       "1329         idlewater          7.5  Red_and_White_Bi_Color   True        3.5  \n",
+       "1241  slowmovingwaters          8.0                   White   True       23.1  \n",
+       "...                ...          ...                     ...    ...        ...  \n",
+       "711              ponds          6.9                   White   True       12.1  \n",
+       "365              ponds          7.7                  Yellow   True        8.1  \n",
+       "1857         idlewater          6.7  Red_and_White_Bi_Color  False       13.7  \n",
+       "765          idlewater          7.6          Reddish_Orange  False       12.7  \n",
+       "129             rivers          6.3     Green_and_Chocolate   True       17.4  \n",
+       "\n",
+       "[1580 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_set = X_train.join(y_train)\n",
+    "train_set"
+   ]
   }
  ],
  "metadata": {
