Fixed error in weight column name, created heatmaps and histograms to view distributions, and conducted one hot encoding

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "[2000 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -311,19 +311,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1976 entries, 0 to 1999\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   id                       1976 non-null   int64  \n",
+      " 1   average_length(inches))  1976 non-null   float64\n",
+      " 2   average_weight(inches))  1976 non-null   float64\n",
+      " 3   habitat                  1976 non-null   object \n",
+      " 4   ph_of_water              1976 non-null   float64\n",
+      " 5   color                    1976 non-null   object \n",
+      " 6   Gender                   1976 non-null   object \n",
+      "dtypes: float64(3), int64(1), object(3)\n",
+      "memory usage: 123.5+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X = data.drop(['life_span'], axis = 1)\n",
+    "X.rename(columns={\"average_weight(inches))\" : \"average_weight(ounces))\"})\n",
+    "X\n",
     "y = data[\"life_span\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +355,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1580 entries, 905 to 1572\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   id                       1580 non-null   int64  \n",
+      " 1   average_length(inches))  1580 non-null   float64\n",
+      " 2   average_weight(inches))  1580 non-null   float64\n",
+      " 3   habitat                  1580 non-null   object \n",
+      " 4   ph_of_water              1580 non-null   float64\n",
+      " 5   color                    1580 non-null   object \n",
+      " 6   Gender                   1580 non-null   object \n",
+      " 7   life_span                1580 non-null   float64\n",
+      "dtypes: float64(4), int64(1), object(3)\n",
+      "memory usage: 175.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "train_set = X_train.join(y_train)\n",
+    "train_set.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -359,179 +415,93 @@
        "      <th>id</th>\n",
        "      <th>average_length(inches))</th>\n",
        "      <th>average_weight(inches))</th>\n",
-       "      <th>habitat</th>\n",
        "      <th>ph_of_water</th>\n",
-       "      <th>color</th>\n",
-       "      <th>Gender</th>\n",
        "      <th>life_span</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1169</th>\n",
-       "      <td>1170</td>\n",
-       "      <td>8.61</td>\n",
-       "      <td>13.23</td>\n",
-       "      <td>rivers</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>Red_and_White_Bi_Color</td>\n",
-       "      <td>False</td>\n",
-       "      <td>18.2</td>\n",
+       "      <th>id</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.017096</td>\n",
+       "      <td>0.039335</td>\n",
+       "      <td>-0.010106</td>\n",
+       "      <td>-0.014096</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>745</th>\n",
-       "      <td>746</td>\n",
-       "      <td>5.62</td>\n",
-       "      <td>16.42</td>\n",
-       "      <td>ponds</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>Red_and_Silver</td>\n",
-       "      <td>False</td>\n",
-       "      <td>2.4</td>\n",
+       "      <th>average_length(inches))</th>\n",
+       "      <td>0.017096</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.015193</td>\n",
+       "      <td>-0.040469</td>\n",
+       "      <td>0.011500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>499</th>\n",
-       "      <td>500</td>\n",
-       "      <td>17.10</td>\n",
-       "      <td>16.93</td>\n",
-       "      <td>slowmovingwaters</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>Reddish_Orange</td>\n",
-       "      <td>True</td>\n",
-       "      <td>16.5</td>\n",
+       "      <th>average_weight(inches))</th>\n",
+       "      <td>0.039335</td>\n",
+       "      <td>0.015193</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.020151</td>\n",
+       "      <td>0.030362</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1329</th>\n",
-       "      <td>1330</td>\n",
-       "      <td>19.89</td>\n",
-       "      <td>17.16</td>\n",
-       "      <td>idlewater</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>Red_and_White_Bi_Color</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3.5</td>\n",
+       "      <th>ph_of_water</th>\n",
+       "      <td>-0.010106</td>\n",
+       "      <td>-0.040469</td>\n",
+       "      <td>-0.020151</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.037255</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1241</th>\n",
-       "      <td>1242</td>\n",
-       "      <td>5.85</td>\n",
-       "      <td>12.57</td>\n",
-       "      <td>slowmovingwaters</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>White</td>\n",
-       "      <td>True</td>\n",
-       "      <td>23.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>711</th>\n",
-       "      <td>712</td>\n",
-       "      <td>18.62</td>\n",
-       "      <td>4.82</td>\n",
-       "      <td>ponds</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>White</td>\n",
-       "      <td>True</td>\n",
-       "      <td>12.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>365</th>\n",
-       "      <td>366</td>\n",
-       "      <td>15.54</td>\n",
-       "      <td>2.04</td>\n",
-       "      <td>ponds</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>Yellow</td>\n",
-       "      <td>True</td>\n",
-       "      <td>8.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1857</th>\n",
-       "      <td>1858</td>\n",
-       "      <td>10.05</td>\n",
-       "      <td>15.47</td>\n",
-       "      <td>idlewater</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>Red_and_White_Bi_Color</td>\n",
-       "      <td>False</td>\n",
-       "      <td>13.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>765</th>\n",
-       "      <td>766</td>\n",
-       "      <td>5.48</td>\n",
-       "      <td>6.77</td>\n",
-       "      <td>idlewater</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>Reddish_Orange</td>\n",
-       "      <td>False</td>\n",
-       "      <td>12.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>129</th>\n",
-       "      <td>130</td>\n",
-       "      <td>9.28</td>\n",
-       "      <td>2.99</td>\n",
-       "      <td>rivers</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>Green_and_Chocolate</td>\n",
-       "      <td>True</td>\n",
-       "      <td>17.4</td>\n",
+       "      <th>life_span</th>\n",
+       "      <td>-0.014096</td>\n",
+       "      <td>0.011500</td>\n",
+       "      <td>0.030362</td>\n",
+       "      <td>-0.037255</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1580 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        id  average_length(inches))  average_weight(inches))  \\\n",
-       "1169  1170                     8.61                    13.23   \n",
-       "745    746                     5.62                    16.42   \n",
-       "499    500                    17.10                    16.93   \n",
-       "1329  1330                    19.89                    17.16   \n",
-       "1241  1242                     5.85                    12.57   \n",
-       "...    ...                      ...                      ...   \n",
-       "711    712                    18.62                     4.82   \n",
-       "365    366                    15.54                     2.04   \n",
-       "1857  1858                    10.05                    15.47   \n",
-       "765    766                     5.48                     6.77   \n",
-       "129    130                     9.28                     2.99   \n",
+       "                               id  average_length(inches))  \\\n",
+       "id                       1.000000                 0.017096   \n",
+       "average_length(inches))  0.017096                 1.000000   \n",
+       "average_weight(inches))  0.039335                 0.015193   \n",
+       "ph_of_water             -0.010106                -0.040469   \n",
+       "life_span               -0.014096                 0.011500   \n",
        "\n",
-       "               habitat  ph_of_water                   color Gender  life_span  \n",
-       "1169            rivers          7.5  Red_and_White_Bi_Color  False       18.2  \n",
-       "745              ponds          6.5          Red_and_Silver  False        2.4  \n",
-       "499   slowmovingwaters          6.8          Reddish_Orange   True       16.5  \n",
-       "1329         idlewater          7.5  Red_and_White_Bi_Color   True        3.5  \n",
-       "1241  slowmovingwaters          8.0                   White   True       23.1  \n",
-       "...                ...          ...                     ...    ...        ...  \n",
-       "711              ponds          6.9                   White   True       12.1  \n",
-       "365              ponds          7.7                  Yellow   True        8.1  \n",
-       "1857         idlewater          6.7  Red_and_White_Bi_Color  False       13.7  \n",
-       "765          idlewater          7.6          Reddish_Orange  False       12.7  \n",
-       "129             rivers          6.3     Green_and_Chocolate   True       17.4  \n",
-       "\n",
-       "[1580 rows x 8 columns]"
+       "                         average_weight(inches))  ph_of_water  life_span  \n",
+       "id                                      0.039335    -0.010106  -0.014096  \n",
+       "average_length(inches))                 0.015193    -0.040469   0.011500  \n",
+       "average_weight(inches))                 1.000000    -0.020151   0.030362  \n",
+       "ph_of_water                            -0.020151     1.000000  -0.037255  \n",
+       "life_span                               0.030362    -0.037255   1.000000  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_set = X_train.join(y_train)\n",
-    "train_set"
+    "train_set[['id', 'average_length(inches))', 'average_weight(inches))', \"ph_of_water\", \"life_span\"]].corr()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
